Falta terminar de debuggear strnstr

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -15,12 +15,11 @@ ft_toupper\
 ft_tolower\
 ft_strchr\
 ft_strrchr\
-#ft_strncmp\
-ft_memchr\
+ft_strncmp\
 ft_memchr\
 ft_memcmp\
 ft_strnstr\
-ft_atoi\
+#ft_atoi\
 ft_calloc\
 ft_strdup\
 
