Falta acabar strtrim

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -22,6 +22,18 @@ ft_strnstr\
 ft_atoi\
 ft_calloc\
 ft_strdup\
+ft_substr\
+ft_strjoin\
+ft_strtrim\
+#ft_split\
+ft_itoa\
+ft_strmapi\
+ft_striteri\
+ft_putchar_fd\
+ft_putstr_fd\
+ft_putendl_fd\
+ft_putnbr_fd\
+
 
 LIBFT_SRC = ./
 LIBFT_OBJ = ./
