Hay que acabar el split

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -25,8 +25,8 @@ ft_strdup\
 ft_substr\
 ft_strjoin\
 ft_strtrim\
-#ft_split\
-ft_itoa\
+ft_split\
+#ft_itoa\
 ft_strmapi\
 ft_striteri\
 ft_putchar_fd\
