--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -35,8 +35,8 @@ ft_putstr_fd\
 ft_putendl_fd\
 
 LIBFT_NAMEB = ft_lstnew_bonus\
-#ft_lstadd_front_bonus\
-ft_lstsize_bonus\
+ft_lstadd_front_bonus\
+#ft_lstsize_bonus\
 ft_lstlast_bonus\
 ft_lstadd_back_bonus\
 ft_lstdelone_bonus\
