--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -36,11 +36,11 @@ ft_putendl_fd\
 
 LIBFT_NAMEB = ft_lstnew_bonus\
 ft_lstadd_front_bonus\
-#ft_lstsize_bonus\
+ft_lstsize_bonus\
 ft_lstlast_bonus\
 ft_lstadd_back_bonus\
 ft_lstdelone_bonus\
-ft_lstclear_bonus\
+#ft_lstclear_bonus\
 ft_lstiter_bonus\
 ft_lstmap_bonus\
 
