Arreglado libft y hecho inicio de movement en so_long

--- a/So_Long/Makefile
+++ b/So_Long/Makefile
@@ -1,4 +1,4 @@
-CFILES = 
+CFILES = src/main.c src/ft_read_map.c src/ft_init.c src/check_map.c
 
 LIBFT = Libft/libft.a
 MLX42 = MLX42/libmlx42.a
@@ -8,6 +8,7 @@ NAME = so_long
 all: $(NAME)
 
 $(NAME): $(LIBFT) $(MLX42)
+	@gcc -Wall -Wextra -Werror $(CFILES) $(LIBFT) $(MLX42) -Iinclude -ldl -lglfw -pthread -lm -o $(NAME) -g
 
 $(LIBFT):
 	@make -C Libft
