--- a/So_Long/Makefile
+++ b/So_Long/Makefile
@@ -1,4 +1,4 @@
-CFILES = src/main.c src/ft_read_map.c src/ft_init.c src/ft_check_map.c src/ft_clean.c src/ft_movement.c
+CFILES = src/ft_check_map.c  src/ft_clean.c  src/ft_init.c  src/ft_movement.c  src/ft_read_map.c  src/ft_render.c  src/ft_render_map.c  src/ft_sprites.c  src/main.c
 
 LIBFT = Libft/libft.a
 MLX42 = MLX42/libmlx42.a
@@ -8,7 +8,10 @@ NAME = so_long
 all: $(NAME)
 
 $(NAME): $(LIBFT) $(MLX42)
-	@gcc -Wall -Wextra -Werror $(CFILES) $(LIBFT) $(MLX42) -Iinclude -ldl -lglfw -pthread -lm -o $(NAME) -g
+	@gcc -Wall -Wextra -Werror $(CFILES) $(LIBFT) $(MLX42) -Iinclude -ldl -lglfw -pthread -lm -o $(NAME)
+
+debug: $(LIBFT) $(MLX42)
+	@gcc -Wall -Wextra -Werror $(CFILES) $(LIBFT) $(MLX42) -Iinclude -ldl -lglfw -pthread -lm -o $(NAME) -g -fsanitize=address
 
 $(LIBFT):
 	@make -C Libft
