--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -1,12 +1,16 @@
 SRC = src/
+SRCCHK = src_bonus/
 OBJ = obj/push_swap/
+CHECKOBJ = obj/checker/
 
 CNAMES = main ft_atol ft_push ft_rotate ft_rrotate ft_swap ft_clean ft_cost ft_errors ft_init ft_position ft_sort ft_utils 
 
+CHECKNAMES = main ft_atol ft_clean ft_errors ft_init ft_push ft_rotate ft_rrotate ft_swap ft_utils
+
 CFILES = $(addprefix $(SRC), $(addsuffix .c, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
-#CHECKFILES = $(addprefix $(SRCCHK), $(addsuffix .c, $(CHECKNAMES)))
-#OCHECK = $(addprefix $(CHECKOBJ), $(addsuffix .o, $(CHECKNAMES)))
+CHECKFILES = $(addprefix $(SRCCHK), $(addsuffix .c, $(CHECKNAMES)))
+OCHECK = $(addprefix $(CHECKOBJ), $(addsuffix .o, $(CHECKNAMES)))
 
 LIBFT = Libft/libft.a
 
@@ -23,6 +27,14 @@ $(OFILES): $(CFILES)
 	@gcc -Wall -Wextra -Werror -c $(CFILES)
 	@mv *.o $(OBJ)
 
+checker: $(OCHECK) $(LIBFT)
+	@gcc -Wall -Wextra -Werror $(OCHECK) $(LIBFT) -o checker
+
+$(OCHECK): $(CHECKFILES)
+	@mkdir -p $(CHECKOBJ)
+	@gcc -Wall -Wextra -Werror -c $(CHECKFILES)
+	@mv *.o $(CHECKOBJ)
+
 $(LIBFT):
 	@make -C Libft
 
@@ -31,6 +43,7 @@ debug: $(LIBFT)
 
 clean:
 	@rm -rf $(NAME)
+	@rm checker
 	@rm -rf obj/
 
 fclean: clean
