cpp00 entregado y aprobado, cpp01 esta en proceso

--- a/Cpp/Cpp01/ex00/Makefile
+++ b/Cpp/Cpp01/ex00/Makefile
@@ -1,4 +1,4 @@
-CNAMES = Phonebook Contact main 
+CNAMES = 
 
 CFLAGS = -Wall -Wextra -Werror -std=c++98 
 
@@ -8,7 +8,7 @@ OBJ = obj/
 CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
 
-NAME = phonebook
+NAME = 
 
 all: $(NAME)
 
