--- a/Cpp/Cpp03/ex02/Makefile
+++ b/Cpp/Cpp03/ex02/Makefile
@@ -8,7 +8,7 @@ OBJ = obj/
 CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
 
-NAME = fragtrap
+NAME = FragTrap
 
 all: $(NAME)
 
