fixed a few minor errors in cpp06 and modified makefile from that point to include headers to allow recompilation if you modify only .hpp

--- a/Cpp/Cpp06/ex00/Makefile
+++ b/Cpp/Cpp06/ex00/Makefile
@@ -7,15 +7,16 @@ OBJ = obj/
 
 CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
+HEADER = inc/ScalarConverter.hpp inc/colors.hpp
 
 NAME =scalarConverter
 all: $(NAME)
 
-$(NAME): $(OFILES)
+$(NAME): $(OFILES) $(HEADER)
 	@c++ $(CFLAGS) $(OFILES) -o $(NAME)
 	@echo "Exercise compiled"
 
-$(OFILES): $(CFILES)
+$(OFILES): $(CFILES) $(HEADER)
 	@mkdir -p $(OBJ)
 	@c++ $(CFLAGS) -c $(CFILES)
 	@mv *.o $(OBJ)
