--- a/Cpp/Cpp09/ex01/Makefile
+++ b/Cpp/Cpp09/ex01/Makefile
@@ -7,16 +7,17 @@ OBJ = obj/
 
 CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
+HEADER = inc/RPN.hpp inc/colors.hpp
 
 NAME = rpn
 
 all: $(NAME)
 
-$(NAME): $(OFILES)
+$(NAME): $(OFILES) $(HEADER)
 	@c++ $(CFLAGS) $(OFILES) -o $(NAME)
 	@echo "Exercise compiled"
 
-$(OFILES): $(CFILES)
+$(OFILES): $(CFILES) $(HEADER)
 	@mkdir -p $(OBJ)
 	@c++ $(CFLAGS) -c $(CFILES)
 	@mv *.o $(OBJ)
