--- a/Cpp/Cpp06/ex01/Makefile
+++ b/Cpp/Cpp06/ex01/Makefile
@@ -7,15 +7,16 @@ OBJ = obj/
 
 CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
+HEADER = inc/Serializer.hpp inc/colors.hpp
 
 NAME = serializer
 all: $(NAME)
 
-$(NAME): $(OFILES)
+$(NAME): $(OFILES) $(HEADER)
 	@c++ $(CFLAGS) $(OFILES) -o $(NAME)
 	@echo "Exercise compiled"
 
-$(OFILES): $(CFILES)
+$(OFILES): $(CFILES) $(HEADER)
 	@mkdir -p $(OBJ)
 	@c++ $(CFLAGS) -c $(CFILES)
 	@mv *.o $(OBJ)
