--- a/inception/srcs/requirements/nginx/conf/nginx.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx.conf
@@ -1,27 +1,41 @@
 server{
 
 	#Listen config
-	listen 443 ssl;
+	listen 443 ssl http2;
 
 	#SSL config
 	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/nginx/ssl/inception.crt;
-	ssl_certificate_key /etc/nginx/ssl/inception.key;
+	ssl_certificate /etc/nginx/ssl/$DOMAIN_NAME.crt;
+	ssl_certificate_key /etc/nginx/ssl/$DOMAIN_NAME.key;
 
 	#Index config and servername
-	root /var/www/wordpress;
-	server_name jcallejo.42.fr;
+	root /domains/$DOMAIN_NAME/public_html;
+	server_name $DOMAIN_NAME www.$DOMAIN_NAME;
 	index index.php index.html index.htm;
 
 	location /{
 		#Error 404 handle
-		try_files $uri $uri/ =404;
+		try_files $uri $uri/ /index.php?args  =404;
 	}
 
 	location ~ \.php$ {
 		#PhP install in WordPress, so this handles it
-		include snippets/fastcgi-php.conf;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+	}
+	
+
+	location ~ /\.log {
+		#Security and removing access to log files
+		deny all;
 	}
 
+	location ~ /\. {
+		#Removing access to all files starting with .
+		deny all;
+	}
 }
