--- a/Cpp/Cpp09/ex02/Makefile
+++ b/Cpp/Cpp09/ex02/Makefile
@@ -1,6 +1,6 @@
 CNAMES = main PmergeMe
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -std=c++98 
 
 SRC = src/
 OBJ = obj/
