--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -6,7 +6,7 @@ FROM alpine:3.20
 ENV TERM xterm
 
 #Commands to install needed packages
-RUN apk update && apk upgrade  && apk add nginx && apk add openssl && apk add envsubst
+RUN apk update && apk upgrade  && apk add --no-cache nginx && apk add openssl && apk add envsubst
 
 #Key storage for ssl
 RUN mkdir -p /etc/nginx/ssl
@@ -17,11 +17,11 @@ RUN sed -i 's/user nginx;/user www-data;/' /etc/nginx/nginx.conf
 RUN sed -i 's/keepalive_timeout 65;/keepalive_timeout 5;/' /etc/nginx/nginx.conf
 
 #Copy the script and give it permissions
-COPY tools/config.sh
+COPY tools/config.sh .
 RUN chmod +x config.sh
 
 #Copy the Nginx config file
-COPY conf/nginx_base.conf
+COPY conf/nginx.conf .
 
 #Clean cache
 RUN rm -f /var/cache/apk/*
