cpp09 ex01 fixed and ex02 minor changed to make it look better

--- a/Cpp/Cpp09/ex01/Makefile
+++ b/Cpp/Cpp09/ex01/Makefile
@@ -9,7 +9,7 @@ CFILES = $(addprefix $(SRC), $(addsuffix .cpp, $(CNAMES)))
 OFILES = $(addprefix $(OBJ), $(addsuffix .o, $(CNAMES)))
 HEADER = inc/RPN.hpp inc/colors.hpp
 
-NAME = rpn
+NAME = RPN
 
 all: $(NAME)
 
