guess who forgot to add a check if the arg in RPN was empty and clearly checked if it segfaulted

--- a/Cpp/Cpp09/ex01/Makefile
+++ b/Cpp/Cpp09/ex01/Makefile
@@ -1,6 +1,6 @@
 CNAMES = main RPN
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = src/
 OBJ = obj/
