--- a/inception/srcs/requirements/nginx/conf/nginx_base.conf
+++ b/inception/srcs/requirements/nginx/conf/nginx_base.conf
@@ -15,7 +15,7 @@ server{
 
 	location /{
 		#Error 404 handle
-		try_files $uri $uri/ /index.php?args  =404;
+		try_files $uri $uri/ /index.php?$args  =404;
 	}
 
 	location ~ \.php$ {
